--- a/docs/faststore/components/molecules/product-title.mdx
+++ b/docs/faststore/components/molecules/product-title.mdx
@@ -7,9 +7,9 @@ components:
   - ProductTitle.tsx
 ---
 
-The `ProductTitle` is a component commonly used on Product Details Page (PDP). It wraps the product name, a product label and the rating.
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/ProductTitle)
 
-## Overview
+The `ProductTitle` is a component commonly used on Product Details Page (PDP). It wraps the product name, a product label and the rating.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -44,88 +44,89 @@ The `ProductTitle` is a component commonly used on Product Details Page (PDP). I
         ratingValue={4.5}
       />
     </OverviewSection>
+
   </Tab>
   <Tab>
 
-  ```tsx
-    <ProductTitle
-      title={<h1>Apple Magic Mouse</h1>}
-      label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
-      refNumber="99995945"
-      ratingValue={4}
-    />
-    <br/>
-    <ProductTitle
-      title={<h1>Apple Magic Mouse</h1>}
-      label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
-      ratingValue={4}
-    />
-    <br/>
-    <ProductTitle
-      title={<h1>Handmade Steel Pants Gorgeous</h1>}
-      label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
-    />
-    <br/>
-    <ProductTitle
-      title={<h1>Handmade Steel Pants Gorgeous</h1>}
-      label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
-      ratingValue={4.5}
-    />
-  ```
+```tsx
+  <ProductTitle
+    title={<h1>Apple Magic Mouse</h1>}
+    label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
+    refNumber="99995945"
+    ratingValue={4}
+  />
+  <br/>
+  <ProductTitle
+    title={<h1>Apple Magic Mouse</h1>}
+    label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
+    ratingValue={4}
+  />
+  <br/>
+  <ProductTitle
+    title={<h1>Handmade Steel Pants Gorgeous</h1>}
+    label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
+  />
+  <br/>
+  <ProductTitle
+    title={<h1>Handmade Steel Pants Gorgeous</h1>}
+    label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
+    ratingValue={4.5}
+  />
+```
 
   </Tab>
 </Tabs>
 
 ---
 
-## Import
-
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
-
-```tsx
-import { ProductTitle } from '@faststore/ui'
-```
-
-### Import Styles into your FastStore project
-
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
-
-```scss
-@import '@faststore/ui/src/components/molecules/ProductTitle/styles.scss'
-```
-
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
-
----
-
 ## Usage
 
-<OverviewSection>
-  <ProductTitle
-    title={<h1>Apple Magic Mouse</h1>}
-    label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
-    refNumber="99995945"
-    ratingValue={4.5}
-  />
-</OverviewSection>
+### Import the component
+
 ```tsx
-<ProductTitle
-  title={<h1>Apple Magic Mouse</h1>}
-  label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
-  refNumber="99995945"
-  ratingValue={4.5}
-/>
+import { ProductTitle } from "@faststore/ui";
 ```
 
+### Import styles
+
+To apply styles, include the following in your stylesheet:
+
+```scss
+@import "@faststore/ui/src/components/molecules/ProductTitle/styles.scss";
+```
+
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
+
 ---
 
-## Props
+## Examples
 
-<ComponentPropsSection component="ProductTitle" />
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <ProductTitle
+        title={<h1>Apple Magic Mouse</h1>}
+        label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
+        refNumber="99995945"
+        ratingValue={4.5}
+      />
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <ProductTitle
+      title={<h1>Apple Magic Mouse</h1>}
+      label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
+      refNumber="99995945"
+      ratingValue={4.5}
+    />
+    ```
+  </Tab>
+</Tabs>
 
 ---
 
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow
@@ -162,12 +163,18 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `ProductTitle` styles using the following data attributes:
 
 `data-fs-product-title`
 
 `data-fs-product-title-header`
 
 `data-fs-product-title-addendum`
+
+---
+
+## Props
+
+<ComponentPropsSection component="ProductTitle" />
