--- a/docs/faststore/components/molecules/accordion.mdx
+++ b/docs/faststore/components/molecules/accordion.mdx
@@ -9,40 +9,13 @@ components:
   - AccordionPanel.tsx
 ---
 
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/Accordion)
+
 The `Accordion` displays an expandable/collapsible list of items. The final Accordion component is a compound of the following:- `Accordion`: wraps a series of `AccordionItem`s in a single component.
 
 - `AccordionItem`: wraps an `AccordionButton` and an `AccordionPanel`.
 - `AccordionButton`: contains the top-level items of the Accordion list. It is a clickable button that shows or hides the child items of a given `AccordionItem`.
 - `AccordionPanel`: contains the child items of a given `AccordionItem`.
-
----
-
-## Import
-
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
-
-```tsx
-import {
-  Accordion,
-  AccordionItem,
-  AccordionButton,
-  AccordionPanel,
-} from '@faststore/ui'
-```
-
-### Import Styles into your FastStore project
-
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
-
-```scss
-@import '@faststore/ui/src/components/molecules/Accordion/styles.scss';
-```
-
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
-
----
-
-## Usage
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -87,98 +60,28 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Props
+## Usage
 
-All accordion-related components support all attributes also supported by the `<div>` tag, except for the `AccordionButton`, which renders the `<button>` tag and inherits [Button](https://developers.vtex.com/docs/guides/faststore/atoms-button) props.
+### Import the component
 
-Besides those attributes, the following props are also supported:
+```tsx
+import {
+  Accordion,
+  AccordionItem,
+  AccordionButton,
+  AccordionPanel,
+} from '@faststore/ui'
+```
 
-### Accordion
+### Import styles
 
-<ComponentPropsSection component="Accordion" />
+To apply styles, include the following in your stylesheet:
 
-### AccordionItem
+```scss
+@import '@faststore/ui/src/components/molecules/Accordion/styles.scss';
+```
 
-<PropsSection propsList={propsAccordionItem} />
-
-### AccordionButton
-
-<ComponentPropsSection component="AccordionButton" />
-
-### AccordionPanel
-
-<ComponentPropsSection component="AccordionPanel" />
-
----
-
-## Design Tokens
-
-### Nested Elements
-
-#### Item
-
-<TokenTable>
-  <TokenRow
-    token="--fs-accordion-item-border-bottom-width"
-    value="var(--fs-border-width)"
-  />
-  <TokenRow
-    token="--fs-accordion-item-border-bottom-color"
-    value="var(--fs-border-color-light)"
-    isColor
-  />
-</TokenTable>
-
-#### Button
-
-<TokenTable>
-  <TokenRow
-    token="--fs-accordion-button-padding"
-    value="var(--fs-spacing-3) 0"
-  />
-  <TokenRow
-    token="--fs-accordion-button-font-size"
-    value="var(--fs-text-size-3)"
-  />
-  <TokenRow
-    token="--fs-accordion-button-font-weight"
-    value="var(--fs-text-weight-bold)"
-  />
-  <TokenRow token="--fs-accordion-button-line-height" value="1.2" />
-  <TokenRow
-    token="--fs-accordion-button-color"
-    value="var(--fs-color-text)"
-    isColor
-  />
-  <TokenRow
-    token="--fs-accordion-button-bkg-color"
-    value="transparent"
-    isColor
-  />
-</TokenTable>
-
-#### Panel
-
-<TokenTable>
-  <TokenRow
-    token="--fs-accordion-panel-padding-bottom"
-    value="var(--fs-spacing-4)"
-  />
-</TokenTable>
-
----
-
-## Customization
-
-`data-fs-accordion`
-
-`data-fs-accordion-item`
-
-`data-fs-accordion-button`
-
-`data-fs-accordion-panel`
-
-The `AccordionButton` component inherits [Button](https://developers.vtex.com/docs/guides/faststore/atoms-button) CSS selectors.
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
@@ -289,3 +192,100 @@ The `AccordionButton` component inherits [Button](https://developers.vtex.com/do
     ```
   </Tab>
 </Tabs>
+
+---
+
+## Design tokens
+
+### Nested Elements
+
+#### Item
+
+<TokenTable>
+  <TokenRow
+    token="--fs-accordion-item-border-bottom-width"
+    value="var(--fs-border-width)"
+  />
+  <TokenRow
+    token="--fs-accordion-item-border-bottom-color"
+    value="var(--fs-border-color-light)"
+    isColor
+  />
+</TokenTable>
+
+#### Button
+
+<TokenTable>
+  <TokenRow
+    token="--fs-accordion-button-padding"
+    value="var(--fs-spacing-3) 0"
+  />
+  <TokenRow
+    token="--fs-accordion-button-font-size"
+    value="var(--fs-text-size-3)"
+  />
+  <TokenRow
+    token="--fs-accordion-button-font-weight"
+    value="var(--fs-text-weight-bold)"
+  />
+  <TokenRow token="--fs-accordion-button-line-height" value="1.2" />
+  <TokenRow
+    token="--fs-accordion-button-color"
+    value="var(--fs-color-text)"
+    isColor
+  />
+  <TokenRow
+    token="--fs-accordion-button-bkg-color"
+    value="transparent"
+    isColor
+  />
+</TokenTable>
+
+#### Panel
+
+<TokenTable>
+  <TokenRow
+    token="--fs-accordion-panel-padding-bottom"
+    value="var(--fs-spacing-4)"
+  />
+</TokenTable>
+
+---
+
+## Data attributes
+
+You can target and override `Accordion` styles using the following data attributes:
+
+`data-fs-accordion`
+
+`data-fs-accordion-item`
+
+`data-fs-accordion-button`
+
+`data-fs-accordion-panel`
+
+The `AccordionButton` component inherits [Button](https://developers.vtex.com/docs/guides/faststore/atoms-button) CSS selectors.
+
+---
+
+## Props
+
+All accordion-related components support all attributes also supported by the `<div>` tag, except for the `AccordionButton`, which renders the `<button>` tag and inherits [Button](https://developers.vtex.com/docs/guides/faststore/atoms-button) props.
+
+Besides those attributes, the following props are also supported:
+
+### Accordion
+
+<ComponentPropsSection component="Accordion" />
+
+### AccordionItem
+
+<PropsSection propsList={propsAccordionItem} />
+
+### AccordionButton
+
+<ComponentPropsSection component="AccordionButton" />
+
+### AccordionPanel
+
+<ComponentPropsSection component="AccordionPanel" />
