--- a/docs/faststore/components/molecules/buy-button.mdx
+++ b/docs/faststore/components/molecules/buy-button.mdx
@@ -7,57 +7,46 @@ components:
   - BuyButton.tsx
 ---
 
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/BuyButton)
+
 The `BuyButton` component intends to send the user to the checkout/cart step directly.
 
-## Overview
-
-<OverviewSection>
-  <BuyButton>Buy Now</BuyButton>
-</OverviewSection>
-```tsx
-<BuyButton>Buy Now</BuyButton>
-```
-
----
-
-## Import
-
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
-
-```tsx
-import { BuyButton } from '@faststore/ui'
-```
-
-### Import Styles into your FastStore project
-
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
-
-```scss
-@import '@faststore/ui/src/components/atoms/BuyButton/styles.scss';
-```
-
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+<Tabs items={['Example', 'Code']} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <BuyButton>Buy Now</BuyButton>
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <BuyButton>Buy Now</BuyButton>
+    ```
+  </Tab>
+</Tabs>
 
 ---
 
 ## Usage
 
-<OverviewSection>
-  <BuyButton>Buy Now</BuyButton>
-</OverviewSection>
+### Import the component
+
 ```tsx
-<BuyButton>Buy Now</BuyButton>
+import { BuyButton } from '@faststore/ui'
 ```
 
+### Import styles
+
+To apply styles, include the following in your stylesheet:
+
+```scss
+@import '@faststore/ui/src/components/atoms/BuyButton/styles.scss';
+```
+
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
+
 ---
 
-## Props
-
-<ComponentPropsSection component="BuyButton" />
-
----
-
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow
@@ -116,13 +105,19 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `BuyButton` styles using the following data attributes:
 
 `data-fs-buy-button`
 
 This component inherits [Button](https://developers.vtex.com/docs/guides/faststore/atoms-button) CSS selectors and styles.
+
+---
+
+## Props
+
+<ComponentPropsSection component="BuyButton" />
 
 ---
 
