--- a/docs/faststore/components/molecules/discount-badge.mdx
+++ b/docs/faststore/components/molecules/discount-badge.mdx
@@ -7,9 +7,9 @@ components:
   - DiscountBadge.tsx
 ---
 
-The `DiscountBadge` displays product's discounts.
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/DiscountBadge)
 
-## Overview
+The `DiscountBadge` displays product's discounts.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -32,46 +32,28 @@ The `DiscountBadge` displays product's discounts.
 
 ---
 
-## Import
+## Usage
 
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
+### Import the component
 
 ```tsx
 import { DiscountBadge } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Badge/styles.scss'
 import '@faststore/ui/src/components/molecules/DiscountBadge/styles.scss';
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Usage
-
-<OverviewSection>
-  <DiscountBadge listPrice={45} spotPrice={40} />
-</OverviewSection>
-
-```tsx
-<DiscountBadge listPrice={45} spotPrice={40} />
-```
-
----
-
-## Props
-
-<ComponentPropsSection component="DiscountBadge" />
-
----
-
-## Design Tokens
+## Design tokens
 
 This component inherits [Badge](https://developers.vtex.com/docs/guides/faststore/atoms-badge) design tokens.
 
@@ -170,12 +152,18 @@ This component inherits [Badge](https://developers.vtex.com/docs/guides/faststor
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `DiscountBadge` styles using the following data attributes:
 
 `data-fs-discount-badge`
 
 `data-fs-discount-badge-variant`
 
 This component inherits [Badge](https://developers.vtex.com/docs/guides/faststore/atoms-badge) css selectors and styles.
+
+---
+
+## Props
+
+<ComponentPropsSection component="DiscountBadge" />
