--- a/docs/faststore/components/molecules/icon-button.mdx
+++ b/docs/faststore/components/molecules/icon-button.mdx
@@ -7,9 +7,9 @@ components:
   - IconButton.tsx
 ---
 
-The `IconButton` is an icon that trigger some sort of action, such as adding an item to the cart.
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/IconButton)
 
-## Overview
+The `IconButton` is an icon that trigger some sort of action, such as adding an item to the cart.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -58,50 +58,39 @@ The `IconButton` is an icon that trigger some sort of action, such as adding an 
 
 ---
 
-## Import
+## Usage
 
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
+### Import the component
 
 ```tsx
 import { IconButton } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Button/styles.scss';
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Usage
+## Data attributes
 
-<OverviewSection>
-  <IconButton icon={<Icon name="ShoppingCart" />} aria-label="Buy" />
-</OverviewSection>
-```tsx
-<IconButton icon={<Icon name="ShoppingCart" />} aria-label="Buy" />
-```
+You can target and override `IconButton` styles using the following data attributes:
+
+`data-fs-icon-button`
+
+This component inherits [Button](https://developers.vtex.com/docs/guides/faststore/atoms-button) CSS selectors and styles.
 
 ---
 
 ## Props
 
 <ComponentPropsSection component="IconButton" />
-
----
-
-## Customization
-
-For further customization, you can use the following data attributes:
-
-`data-fs-icon-button`
-
-This component inherits [Button](https://developers.vtex.com/docs/guides/faststore/atoms-button) CSS selectors and styles.
 
 ---
 
