--- a/docs/faststore/components/molecules/input-field.mdx
+++ b/docs/faststore/components/molecules/input-field.mdx
@@ -5,9 +5,9 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Input___77d0e7a8079b7d310e8223dd9e1994f6.png
 ---
 
-The `InputField` is a text field component to get user inputs. The component wraps an [Input](https://developers.vtex.com/docs/guides/faststore/atoms-input) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/InputField)
 
-## Overview
+The `InputField` is a text field component to get user inputs. The component wraps an [Input](https://developers.vtex.com/docs/guides/faststore/atoms-input) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -50,45 +50,27 @@ The `InputField` is a text field component to get user inputs. The component wra
 
 ---
 
-## Import
+## Usage
 
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
+### Import the component
 
 ```tsx
 import { InputField } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/molecules/InputField/styles.scss';
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Usage
-
-<OverviewSection>
-  <InputField label="Label" id="inputfield-label" />
-</OverviewSection>
-
-```tsx
-<InputField label="Label" id="inputfield-label" />
-```
-
----
-
-## Props
-
-<PropsSection propsList={propsInputField} />
-
----
-
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow
@@ -254,12 +236,18 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `InputField` styles using the following data attributes:
 
 `data-fs-input-field`
 
 `data-fs-input-field-error`
 
 `data-fs-input-field-error-message`
+
+---
+
+## Props
+
+<PropsSection propsList={propsInputField} />
