--- a/docs/faststore/components/molecules/popover.mdx
+++ b/docs/faststore/components/molecules/popover.mdx
@@ -4,6 +4,8 @@ components:
   - Popover.tsx
 ---
 
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/Popover)
+
 `Popover` is a floating container component that provides contextual information positioned relative to a trigger element, such as a button or icon, when a user interacts with it to open the container.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
@@ -44,29 +46,23 @@ components:
 
 ---
 
-## Import
+## Usage
 
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
+### Import the component
 
 ```tsx
 import { Popover } from '@faststore/ui'
 ```
 
-### Import styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/molecules/Popover/styles.scss';
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
-
----
-
-## Props
-
-<ComponentPropsSection component="Popover" />
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
@@ -119,9 +115,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `Popover` styles using the following data attributes:
 
 `data-fs-popover`
 
@@ -134,3 +130,9 @@ For further customization, you can use the following data attributes:
 `data-fs-popover-indicator`
 
 `data-fs-popover-header-placement="top | top-center | top-start | top-end | bottom | bottom-center | bottom-start | bottom-end"`
+
+---
+
+## Props
+
+<ComponentPropsSection component="Popover" />
