--- a/docs/faststore/components/molecules/rating-field.mdx
+++ b/docs/faststore/components/molecules/rating-field.mdx
@@ -4,67 +4,98 @@ components:
   - RatingField.tsx
 ---
 
-The `RatingField` component allows users to submit ratings when submitting product reviews. It wraps the [Rating](https://developers.vtex.com/docs/guides/faststore/molecules-rating) component, which displays the rating system, and the associated [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label) component, which provides a text description for the rating field. 
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/RatingField)
 
-## Overview
+The `RatingField` component allows users to submit ratings when submitting product reviews. It wraps the [Rating](https://developers.vtex.com/docs/guides/faststore/molecules-rating) component, which displays the rating system, and the associated [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label) component, which provides a text description for the rating field.
 
-<Tabs items={['Example', 'Code']} defaultIndex="0">
+<Tabs items={["Example", "Code"]} defaultIndex="0">
   <Tab>
-    <OverviewSection containerStyle={{ flexDirection:'column', alignItems: 'normal' }}>
-      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" />
-      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." />
-     </OverviewSection>
+    <OverviewSection
+      containerStyle={{ flexDirection: "column", alignItems: "normal" }}
+    >
+      <RatingField
+        label="Rate the product from 1 to 5 stars"
+        id="rating-field-default"
+      />
+      <RatingField
+        label="Rate the product from 1 to 5 stars"
+        id="rating-field-error"
+        error="This field is required."
+      />
+    </OverviewSection>
   </Tab>
-  
+
   <Tab>
     ```tsx
-      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" />
-      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." />
+    <RatingField
+      label="Rate the product from 1 to 5 stars"
+      id="rating-field-default"
+    />
+    <RatingField
+      label="Rate the product from 1 to 5 stars"
+      id="rating-field-error"
+      error="This field is required."
+    />
     ```
   </Tab>
 </Tabs>
 
 ---
 
-## Import
+## Usage
 
-Import the component from the [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index) package.
+### Import the component
 
 ```tsx
-import { RatingField } from '@faststore/ui'
+import { RatingField } from "@faststore/ui";
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component to your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
-@import '@faststore/ui/src/components/molecules/RatingField/styles.scss';
+@import "@faststore/ui/src/components/molecules/RatingField/styles.scss";
 ```
 
-For more information, check [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Props
+## Examples
 
-<ComponentPropsSection component="RatingField" />
+### Variants
+
+#### Error
+
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <RatingField
+        label="Rate the product from 1 to 5 stars"
+        id="rating-field-error"
+        error="This field is required."
+      />
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <RatingField
+      label="Rate the product from 1 to 5 stars"
+      id="rating-field-error"
+      error="This field is required."
+    />
+    ```
+  </Tab>
+</Tabs>
 
 ---
 
-## Design Tokens
+## Design tokens
 
 ### Nested elements
 
 #### Label
-
-<OverviewSection>
-  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" />
-</OverviewSection>
-
-```tsx
-  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" />
-```
 
 <TokenTable>
   <TokenRow
@@ -86,23 +117,12 @@ For more information, check [Importing FastStore UI component styles](https://de
 
 #### Error
 
-<OverviewSection>
-  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." />
-</OverviewSection>
-
-```tsx
-  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." />
-```
-
 <TokenTable>
   <TokenRow
     token="--fs-rating-field-error-message-size"
     value="var(--fs-text-size-legend)"
   />
-  <TokenRow
-    token="--fs-rating-field-error-message-line-height"
-    value="1.1"
-  />
+  <TokenRow token="--fs-rating-field-error-message-line-height" value="1.1" />
   <TokenRow
     token="--fs-rating-field-error-message-color"
     value="var(--fs-color-danger-text)"
@@ -110,12 +130,18 @@ For more information, check [Importing FastStore UI component styles](https://de
   />
 </TokenTable>
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `RatingField` styles using the following data attributes:
 
 `data-fs-rating-field`
 
 `data-fs-rating-field-label`
 
 `data-fs-rating-field-error-message`
+
+---
+
+## Props
+
+<ComponentPropsSection component="RatingField" />
