--- a/docs/faststore/components/molecules/tag.mdx
+++ b/docs/faststore/components/molecules/tag.mdx
@@ -1,17 +1,15 @@
 ---
 title: "Tag"
 excerpt: Interactive badges.
-keywords:
-  - UI library
-  - ecommerce
-  - react
+components:
+  - Tag.tsx
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Badge___bcedffeb307527c1606be224a7fb5ac1.png
 ---
 
-The `Tag` component is an interactive `Badge`. By default, its have a close button.
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/Tag)
 
-## Overview
+The `Tag` component is an interactive `Badge`. By default, its have a close button.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -44,45 +42,28 @@ The `Tag` component is an interactive `Badge`. By default, its have a close butt
 
 ---
 
-## Import
+## Usage
 
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
+### Import the component
 
 ```tsx
 import { Tag } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/molecules/Tag/styles.scss';
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Usage
 
-<OverviewSection>
-  <Tag variant="info" label="Summer Sale" onClose={() => {}} />
-</OverviewSection>
-
-```tsx
-<Tag variant="info" label="Summer Sale" onClose={() => {}} />
-```
-
----
-
-## Props
-
-<ComponentPropsSection component="Tag" />
-
----
-
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow token="--fs-tag-text-color" value="var(--fs-color-text)" isColor />
@@ -93,9 +74,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `Tag` styles using the following data attributes:
 
 `data-fs-tag`
 
@@ -104,6 +85,12 @@ For further customization, you can use the following data attributes:
 `data-fs-tag-icon-button`
 
 This component inherits [Badge](https://developers.vtex.com/docs/guides/faststore/atoms-badge) CSS selectors and styles.
+
+---
+
+## Props
+
+<ComponentPropsSection component="Tag" />
 
 ---
 
