--- a/docs/faststore/components/molecules/textarea-field.mdx
+++ b/docs/faststore/components/molecules/textarea-field.mdx
@@ -5,6 +5,8 @@ components:
   - TextareaField.tsx
 ---
 
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/molecules/TextareaField)
+
 `TextareaField` is a multi-line text field component to get long user inputs. The component wraps a [Textarea](https://developers.vtex.com/docs/guides/faststore/atoms-textarea) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
@@ -35,43 +37,98 @@ components:
 
 ---
 
-## Import
+## Usage
 
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
+### Import the component
 
 ```tsx
-import { TextareaField } from '@faststore/ui'
+import { TextareaField } from "@faststore/ui";
 ```
 
-### Import styles into your FastStore project
+### Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
-@import '@faststore/ui/src/components/molecules/TextareaField/styles.scss';
+@import "@faststore/ui/src/components/molecules/TextareaField/styles.scss";
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
-## Props
+## Examples
 
-<ComponentPropsSection component="TextareaField" />
+### With label
+
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <TextareaField label="Label" id="textareafield-default" />
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <TextareaField label="Label" id="textareafield-default" />
+    ```
+  </Tab>
+</Tabs>
+
+### Variants
+
+#### Error
+
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <TextareaField
+        label="Input w/ Error Message"
+        id="textareafield-error"
+        error="Error Message"
+      />
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <TextareaField
+      label="Input w/ Error Message"
+      id="textareafield-error"
+      error="Error Message"
+    />
+    ```
+  </Tab>
+</Tabs>
+
+#### Disabled
+
+<Tabs items={["Example", "Code"]} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <TextareaField
+        label="Input Disabled"
+        id="textareafield-disabled"
+        disabled
+      />
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    <TextareaField
+      label="Input Disabled"
+      id="textareafield-disabled"
+      disabled
+    />
+    ```
+  </Tab>
+</Tabs>
 
 ---
 
 ## Design tokens
 
 <TokenTable>
-  <TokenRow
-    token="--fs-textarea-width"
-    value="100%"
-  />
-  <TokenRow
-    token="--fs-textarea-height"
-    value="100%"
-  />
+  <TokenRow token="--fs-textarea-width" value="100%" />
+  <TokenRow token="--fs-textarea-height" value="100%" />
   <TokenDivider />
   <TokenRow
     token="--fs-textarea-field-padding"
@@ -82,10 +139,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
     value="var(--fs-color-text)"
     isColor
   />
-  <TokenRow
-    token="--fs-textarea-field-size"
-    value="var(--fs-text-size-body)"
-  />
+  <TokenRow token="--fs-textarea-field-size" value="var(--fs-text-size-body)" />
   <TokenRow
     token="--fs-textarea-field-border-color"
     value="var(--fs-border-color)"
@@ -109,14 +163,6 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 ### Nested elements
 
 #### Label
-
-<OverviewSection>
-  <TextareaField label="Label" id="textareafield-default" />
-</OverviewSection>
-
-```tsx
-  <TextareaField label="Label" id="textareafield-default" />
-```
 
 <TokenTable>
   <TokenRow
@@ -160,31 +206,12 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 #### Error
 
-<OverviewSection>
-  <TextareaField
-  label="Input w/ Error Message"
-  id="textareafield-error"
-  error="Error Message"
-  />
-</OverviewSection>
-
-```tsx
-<TextareaField
- label="Input w/ Error Message"
- id="textareafield-error"
- error="Error Message"
-/>
-```
-
 <TokenTable>
   <TokenRow
     token="--fs-textarea-field-error-message-size"
     value="var(--fs-text-size-legend)"
   />
-  <TokenRow
-    token="--fs-textarea-field-error-message-line-height"
-    value="1.1"
-  />
+  <TokenRow token="--fs-textarea-field-error-message-line-height" value="1.1" />
   <TokenRow
     token="--fs-textarea-field-error-message-margin-top"
     value="var(--fs-spacing-0)"
@@ -212,14 +239,6 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 #### Disabled
 
-<OverviewSection>
-  <TextareaField label="Input Disabled" id="textareafield-disabled" disabled />
-</OverviewSection>
-
-```tsx
-<TextareaField label="Input Disabled" id="textareafield-disabled" disabled />
-```
-
 <TokenTable>
   <TokenRow
     token="--fs-textarea-field-disabled-bkg-color"
@@ -244,9 +263,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Customization
+## Data attributes
 
-For further customization, you can use the following data attributes:
+You can target and override `TextareaField` styles using the following data attributes:
 
 `data-fs-textarea-field`
 
@@ -255,3 +274,9 @@ For further customization, you can use the following data attributes:
 `data-fs-textarea-field-error`
 
 `data-fs-textarea-field-error-message`
+
+---
+
+## Props
+
+<ComponentPropsSection component="TextareaField" />
